--- a/index1.html
+++ b/index1.html
@@ -14,7 +14,7 @@
 
         <nav>
             <div id="mvps">
-                <a href="">MVPs</a>
+                <a href="contenido/mvp.html">MVPs</a>
                 <p>Descubre a detalle quien fueron las cabras que me dieron el valor de poder decirte hoy en dia lo mucho que te quiero</p>
             </div>
 
