--- a/contenido/mvp.html
+++ b/contenido/mvp.html
@@ -12,32 +12,32 @@
             <h4>Sin ellos no estaria donde estoy</h4>
         </header>
         <main>
-            <div class="boton" id="Javi" onmouseover=ponerPuntuacion(this)>
+            <div class="boton" id="Javi" onclick=irAlMVP(this) onmouseover=ponerPuntuacion(this)>
                 <button type="button">
                     <img src="../imagenes/javi.png" alt="javi">
                 </button>
             </div>
-            <div class="boton" id="Sofia" onmouseover=ponerPuntuacion(this)>
+            <div class="boton" id="Sofia" onclick=irAlMVP(this) onmouseover=ponerPuntuacion(this)>
                 <button type="button">
                     <img src="../imagenes/sofia.png" alt="sofia">
                 </button>
             </div>   
-            <div class="boton" id="Miguel" onmouseover=ponerPuntuacion(this)>
+            <div class="boton" id="Miguel" onclick=irAlMVP(this) onmouseover=ponerPuntuacion(this)>
                 <button type="button">
                     <img src="../imagenes/miguel.png" alt="miguel">
                 </button>
             </div>   
-            <div class="boton" id="Jorge" onmouseover=ponerPuntuacion(this)>
+            <div class="boton" id="Jorge" onclick=irAlMVP(this) onmouseover=ponerPuntuacion(this)>
                 <button type="button">
                     <img src="../imagenes/jorge.png" alt="jorge">
                 </button>
             </div>   
-            <div class="boton" id="Pablo" onmouseover=ponerPuntuacion(this)>
+            <div class="boton" id="Pablo" onclick=irAlMVP(this) onmouseover=ponerPuntuacion(this)>
                 <button type="button">
                     <img src="../imagenes/pablo.png" alt="pablo">
                 </button>
             </div>   
-            <div class="boton" id="Martinez" onmouseover=ponerPuntuacion(this)>
+            <div class="boton" id="Martinez" onclick=irAlMVP(this) onmouseover=ponerPuntuacion(this)>
                 <button type="button">
                     <img src="../imagenes/martinez.png" alt="martine">
                 </button>
