--- a/index1.html
+++ b/index1.html
@@ -19,18 +19,13 @@
             </div>
 
             <div id="campeonatos">
-                <a href="">WDC</a>
+                <a href="contenido/wdc.html">WDC</a>
                 <p>En esta seccion se detalla cada uno de lo que yo considero mis WDC desde que te conozco</p>
             </div>
 
             <div id="amor">
-                <a href="">CARTA PARA YIZÉ</a>
+                <a href="contenido/carta.html">CARTA PARA YIZÉ</a>
                 <p>Un texto que define mis sentimientos sinceros hacia ti con detalle (NO LEER ACOMPAÑADA)</p>
-            </div>
-            
-            <div id="making">
-                <a href="">BEHIND THE SCENES</a>
-                <p>Ve paso a paso como se creo esta parte de tu regalo de San Valentin</p>
             </div>
         </nav>
     </body>
